Fix spacing of custom_banner block on home [WEB-3172]

--- a/frontend/scss/molecules/_m-custom-banner.scss
+++ b/frontend/scss/molecules/_m-custom-banner.scss
@@ -148,7 +148,7 @@
         }
     }
 
-    &.custom-banner-block--default, &.custom-banner-block--educator-resources {
+    &.custom-banner-block--default, &.custom-banner-block--home, &.custom-banner-block--educator-resources {
         .custom-banner-body {
             font-size: 24px;
             font-family: $serif-font--loaded !important;
